# firebat

./: .dockerignore  .env.local.example  .gitignore  ACKNOWLEDGEMENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.core  Dockerfile.renderer  LICENSE  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  ecosystem.config.js  example.txt  instrumentation.node.ts  instrumentation.ts  next.config.mjs  package-lock.json  package.json  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
core/: Cargo.toml  build.rs  capabilities.ts  default-user-prompt.ts  index.ts  vault-keys.ts
core-rust/: .dockerignore  .gitignore  Cargo.toml
core-rust/src/: capabilities.rs  lib.rs  main.rs  ports.rs  task_executor_impl.rs  tool_registry.rs  vault_keys.rs
core-rust/src/adapters/: auth.rs  cache.rs  cron.rs  database.rs  llm.rs  log.rs  mcp_client.rs  media.rs  memory.rs  mod.rs  sandbox.rs  storage.rs  tracing_log.rs  vault.rs
core-rust/src/image_gen/: adapter.rs  format_handler.rs  mod.rs
core-rust/src/llm/: adapter.rs  component_search_index.rs  config.rs  mod.rs  tool_search_index.rs
core-rust/src/managers/: ai.rs  auth.rs  capability.rs  consolidation.rs  conversation.rs  cost.rs  entity.rs  episodic.rs  event.rs  mcp.rs  media.rs  mod.rs  module.rs  page.rs  project.rs  schedule.rs  secret.rs  status.rs  storage.rs  task.rs  template.rs  tool.rs
core-rust/src/services/: ai.rs  auth.rs  cache.rs  capability.rs  consolidation.rs  conversation.rs  cost.rs  database.rs  entity.rs  episodic.rs  event.rs  mcp.rs  media.rs  memory_file.rs  mod.rs  module.rs  network.rs  page.rs  schedule.rs  secret.rs  settings.rs  status.rs  storage.rs  task.rs  telegram.rs  template.rs
core-rust/src/utils/: condition.rs  message_merge.rs  mod.rs  pending_tools.rs  render_map.rs  sanitize.rs
core/managers/: ai-manager.ts  auth-manager.ts  capability-manager.ts  consolidation-manager.ts  conversation-manager.ts  core-ai-manager.ts  cost-manager.ts  entity-manager.ts  episodic-manager.ts  event-manager.ts  image-manager.ts  mcp-manager.ts  media-manager.ts  module-manager.ts  page-manager.ts  project-manager.ts  schedule-manager.ts  secret-manager.ts  status-manager.ts  storage-manager.ts  task-manager.ts  template-manager.ts  tool-manager.ts
core/managers/ai/: history-resolver.ts  prompt-builder.ts  result-processor.ts  retrieval-engine.ts  tool-dispatcher.ts  tool-router.ts  tool-schemas.ts
core/ports/: index.ts
core/src/: capabilities.rs  core_facade.rs  lib.rs  ports.rs  principal.rs  prompt_store.rs  task_executor_impl.rs  tool_registry.rs  vault_keys.rs
core/src/grpc/: ai.rs  auth.rs  cache.rs  capability.rs  chatbot.rs  consolidation.rs  conversation.rs  cost.rs  database.rs  entity.rs  episodic.rs  event.rs  hub.rs  lifecycle.rs  mcp.rs  media.rs  memory_file.rs  mod.rs  module.rs  network.rs  page.rs  project.rs  schedule.rs  secret.rs  settings.rs  skill.rs  telegram.rs  template.rs  tool.rs
core/src/i18n/: mod.rs
core/src/llm/: config.rs  mod.rs  registry.rs
core/src/managers/: ai.rs  auth.rs  capability.rs  chatbot.rs  consolidation.rs  conversation.rs  cost.rs  entity.rs  episodic.rs  event.rs  hub.rs  library.rs  llm_service.rs  mcp.rs  media.rs  memory_facade.rs  memory_file.rs  mod.rs  module.rs  page.rs  project.rs  schedule.rs  secret.rs  skill_file.rs  status.rs  storage.rs  task.rs  template.rs  tool.rs
core/src/services/: ai.rs  auth.rs  cache.rs  capability.rs  consolidation.rs  conversation.rs  cost.rs  database.rs  entity.rs  episodic.rs  event.rs  lifecycle.rs  mcp.rs  media.rs  memory_file.rs  module.rs  network.rs  page.rs  project.rs  schedule.rs  secret.rs  (+7 more)
core/types/: index.ts
core/utils/: condition.ts  error-capture.ts  json-normalize.ts  message-merge.ts  path-resolve.ts  sanitize.ts  turn-context.ts
infra/: Cargo.toml  Dockerfile  boot.ts  config.ts
infra/auth/: index.ts
infra/cron/: index.ts
infra/data/: llm-models.json  stock-apis-kis.json  stock-apis-kiwoom.json
infra/database/: index.ts
infra/entity/: sqlite-adapter.ts
infra/episodic/: sqlite-adapter.ts
infra/image/: config-adapter.ts  factory.ts  format-handler.ts  image-config.ts
infra/image-processor/: sharp-adapter.ts
infra/llm/: component-registry.ts  component-search-index.ts  config-adapter.ts  embedder-adapter.ts  embedder.ts  factory.ts  format-handler.ts  llm-router.ts  model-config.ts  openai-adapter.ts  tool-search-index.ts  vertex-adapter.ts
infra/log/: index.ts
infra/mcp-client/: index.ts
infra/media/: local-adapter.ts
infra/network/: index.ts
infra/observability/: pii-sanitizer.ts  sentry-adapter.ts
infra/sandbox/: index.ts
infra/security/: token-redactor.ts
infra/src/: grpc_interceptor.rs  lib.rs  log_service.rs  main.rs  mcp_server.rs
infra/storage/: index.ts  vault-adapter.ts
infra/tests/: ai_code_assist_test.rs  ai_component_search_index_test.rs  ai_history_resolver_test.rs  ai_manager_public_test.rs  ai_prompt_builder_test.rs  ai_retrieval_engine_test.rs  ai_system_context_test.rs  ai_tool_dispatcher_test.rs  ai_tool_router_test.rs  ai_tool_search_index_test.rs  auth_manager_test.rs  build_session_modify_test.rs  capability_manager_test.rs  consolidation_manager_test.rs  conversation_manager_test.rs  cost_manager_test.rs  entity_manager_test.rs  episodic_manager_test.rs  event_manager_test.rs  mcp_manager_test.rs  media_manager_test.rs  module_manager_test.rs  page_binding_test.rs  page_manager_test.rs  project_manager_test.rs  schedule_manager_test.rs  secret_manager_test.rs  skill_file_manager_test.rs  storage_manager_test.rs  svc_ai_test.rs  svc_auth_test.rs  svc_capability_test.rs  svc_consolidation_test.rs  svc_database_test.rs  svc_entity_test.rs  svc_episodic_test.rs  svc_event_test.rs  svc_mcp_test.rs  svc_media_test.rs  svc_memory_file_test.rs  (+10 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md
src-tauri/scripts/: install-cli.js
src-tauri/src/: core_runtime.rs  main.rs  node_sidecar.rs
(+731 files in other folders)
