# Cargo workspace root — Phase B-4 cutover (TS 폐기 후 Rust 단일).
#
# Three Rust crates (hexagonal — 의존 단방향 infra → core, src-tauri → infra):
#   - core/    — managers + services + ports trait (infra 의존 0건)
#   - infra/   — adapters + LLM + image_gen + main binary (firebat-core)
#   - src-tauri/ — Tauri shell (self-installed distribution, infra crate embed)
#
# Self-hosted (Phase C Docker) 빌드 시: `cargo build --release -p firebat-infra --bin firebat-core`
# Self-installed (Phase D Tauri) 빌드 시: `cargo tauri build` 또는 `npm run tauri:build`

[workspace]
members = [
    "core",
    "infra",
    "src-tauri",
]
resolver = "2"

# 공통 deps 의 default 버전 — workspace member 가 `<dep>.workspace = true` 로 inherit 가능.
# (현재는 명시 안 활용 — 향후 정리 시 옮길 수 있음)
[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["JRs-Master"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
