# Cargo workspace root — Phase B-4 cutover + Self-installed Tauri 폐기 (2026-05-06).
#
# Two Rust crates (hexagonal — 의존 단방향 infra → core):
#   - core/    — managers + services + ports trait (infra 의존 0건)
#   - infra/   — adapters + LLM + image_gen + main binary (firebat-core)
#
# 단일 distribution: Self-hosted Docker (Phase C).
# Self-installed Tauri 는 v2.0 이연 — Next.js SPA 추출 후 진짜 가벼운 데스크톱 앱 (~15MB) 도입 시점.
# 옛 src-tauri/ 디렉토리 + Node sidecar 구조 폐기 (어르신 사용자 UX 파탄 위험 — 좀비 프로세스 /
# 포트 충돌 / 방화벽 발작). 매니지드 호스팅 (Vultr Docker) 가 더 합리.
#
# 빌드: `cargo build --release -p firebat-infra --bin firebat-core`

[workspace]
members = [
    "core",
    "infra",
]
resolver = "2"

# 공통 deps 의 default 버전 — workspace member 가 `<dep>.workspace = true` 로 inherit 가능.
# (현재는 명시 안 활용 — 향후 정리 시 옮길 수 있음)
[workspace.package]
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["JRs-Master"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
