[package]
name = "firebat-core"
version = "0.0.1"
edition = "2021"
description = "Firebat Core — Rust backend (v1.0 Final Phase B target)"
license = "AGPL-3.0-or-later"
authors = ["JRs-Master"]

# Phase D self-installed 시 Tauri 안에 lib 으로 embed,
# self-hosted 시 [[bin]] 으로 단일 binary build — 두 build target 단일 codebase.
[lib]
name = "firebat_core"
crate-type = ["lib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "firebat-core"
path = "src/main.rs"

[dependencies]
# Phase A / B 박힘 — Phase B 진행하며 추가
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "process", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
# Phase B-3 박힘 (SecretManager + Vault)
rusqlite = { version = "0.32", features = ["bundled"] }   # SQLite DB / Vault — bundled 정적 링크
# Phase B-4 박힘 (AuthManager)
rand = "0.8"        # 보안 토큰 random
subtle = "2"        # timing-safe 비교 (timing attack 방어)
# Phase B-9 박힘 (PageManager — 미디어 URL 추출)
regex = "1"
# Phase B-13 박힘 (ScheduleManager — cron expression parser + chrono timezone)
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
# Phase B-17b 박힘 (main.rs graceful shutdown — SIGTERM + Context error trace)
anyhow = "1"
# Phase B-17 박힘 (LLM API 5 format + CLI 3 format)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
futures-util = "0.3"
url = "2"
base64 = "0.22"
# Phase B-17.5c 박힘 (tracing + correlation ID + structured 로그)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }
# Phase B-18 Step 1.5 박힘 — ConversationManager 의 sha1(version:text) cache 무효화 키 + hex 인코딩
sha1 = "0.10"
hex = "0.4"
# Phase B-18 Step 2b 박힘 — 이미지 후처리 (옛 TS sharp 1:1 port)
# image = decode/encode (png/jpeg/webp/gif/bmp/ico — default features 로 충분)
# fast_image_resize = SIMD-가속 resize (sharp/libvips 의 Rust 등가)
# blurhash = LQIP base83 인코딩 (옛 TS blurhash npm 1:1)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "rayon"] }
fast_image_resize = { version = "5", features = ["image"] }
blurhash = "0.2"

# Phase B-18 Step 1.6 박힘 — E5 로컬 임베딩 (옛 TS Xenova/multilingual-e5-small transformers.js 1:1 port)
# candle = HuggingFace 공식 pure Rust ML. cpu only (default-features=false 로 cuda/metal 끄고).
# hf-hub = 모델 자동 다운로드 + 캐싱. tokenizers = HF 공식 토크나이저.
# 첫 실행 시 ~470MB 모델 다운로드 (intfloat/multilingual-e5-small safetensors).
# env `FIREBAT_EMBEDDER=e5` 박혀있을 때만 활성 — default 는 StubEmbedderAdapter (가볍게).
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.3", default-features = false, features = ["online", "tokio"] }

# Phase B 활성 시 추가 (현재 commented):
#   tracing = "0.1"                                    # 로그
#   image = "0.25"                                     # Image (또는 Node bridge)
#   blurhash = "0.2"
#   ammonia = "4"                                      # HTML sanitize

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros", "fs"] }

[build-dependencies]
tonic-build = "0.12"
# protoc binary 자동 vendored — 사용자 PC / CI 의 protoc 설치 의존성 제거
protoc-bin-vendored = "3"

[profile.release]
opt-level = 3
lto = true              # 정적 링크 + 최적화
codegen-units = 1       # 최대 최적화
strip = true            # debug symbol 제거
panic = "abort"         # 작은 binary

[profile.dev]
opt-level = 0
debug = true
